# screenshot-bot

./: .gitignore  Dockerfile  README.md  auto_msg_and_image.py  compress.py  env.sh  logger.py  main.py  one-send.py  prod-env.sh  pyproject.toml  record.py  requirements.txt  screenshot.py  test.py  wecom.py  wecom_msg.py
